tests/e2e-test/sidecar-injector/injected/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - 1d
  - name: kyverno-envoy-plugin
